<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
	<EditText
        android:id="@+id/mock_latitude"
        android:inputType="number|numberSigned|numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/mock_dialog_latitude" />
    <EditText
        android:id="@+id/mock_longitude"
        android:inputType="number|numberSigned|numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/mock_dialog_longitude" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/mock_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_dialog_close"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/mock_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_dialog_toggle"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/mock_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_dialog_set"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>
