<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/mock_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/get_location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/location_fragment_button_mock_settings" />

    <Button
        android:id="@+id/get_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/mock_settings"
        android:text="@string/location_fragment_button_get_location" />

    <TextView
        android:id="@+id/label_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_latitude"
        android:layout_below="@+id/label_latitude"
        android:layout_marginTop="14dp"
        android:text="@string/location_fragment_label_longitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textview_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_longitude"
        android:layout_alignRight="@+id/textview_latitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/trigger_random_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/get_location"
        android:layout_below="@+id/label_longitude"
        android:layout_marginTop="26dp"
        android:text="@string/trigger_random_location" />

    <TextView
        android:id="@+id/label_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mock_settings"
        android:layout_below="@+id/mock_settings"
        android:layout_marginTop="21dp"
        android:text="@string/location_fragment_label_latitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textview_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/get_location"
        android:layout_alignTop="@+id/label_latitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
